# xvr

./: .gitignore  .pre-commit-config.yaml  .typos.toml  404.html  CNAME  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  tests.yml
assets/css/: main.css
cli/animate/: index.html
cli/dcm2nii/: index.html
cli/register/: index.html
cli/restart/: index.html
cli/train/: index.html
docs/: index.md
docs/cli/: animate.md  dcm2nii.md  register.md  restart.md  train.md
docs/scripts/: gen_ref_pages.py
docs/stylesheets/: extra.css
reference/SUMMARY/: index.html
reference/xvr/cli/: index.html
reference/xvr/cli/cli/: index.html
reference/xvr/cli/commands/: index.html
reference/xvr/cli/formatter/: index.html
reference/xvr/config/: index.html
reference/xvr/config/registrar/: index.html
reference/xvr/config/trainer/: index.html
reference/xvr/io/: index.html
reference/xvr/io/xray/: index.html
reference/xvr/metrics/: index.html
reference/xvr/metrics/evaluator/: index.html
reference/xvr/model/: index.html
reference/xvr/model/augmentations/: index.html
reference/xvr/model/inference/: index.html
reference/xvr/model/loss/: index.html
reference/xvr/model/network/: index.html
reference/xvr/model/sampler/: index.html
reference/xvr/registrar/: index.html
reference/xvr/renderer/: index.html
reference/xvr/utils/: index.html
reference/xvr/visualization/: index.html
scripts/: evaluate.py
scripts/deepfluoro/evaluate/: de_novo.sh  finetuned.sh  foundation.sh
scripts/deepfluoro/register/: de_novo.sh  finetuned.sh  foundation.sh
scripts/deepfluoro/train/: de_novo.sh  finetune.sh  finetune_oglr.sh
scripts/femur/register/: de_novo.sh  finetuned.sh
scripts/femur/train/: de_novo.sh  finetune.sh
scripts/ljubljana/evaluate/: de_novo.sh  finetuned.sh  foundation.sh
scripts/ljubljana/register/: de_novo.sh  finetuned.sh  foundation.sh
scripts/ljubljana/train/: de_novo.sh  finetune.sh
scripts/pelvis/evaluate/: finetuned.py  patient_agnostic.py  patient_specific.py
scripts/pelvis/register/: finetuned.py  patient_agnostic.py  patient_specific.py  patient_specific.sh
scripts/pelvis/train/: finetuned.py  patient_agnostic.py  patient_agnostic.sh  patient_specific.py  patient_specific.sh
scripts/skull/train/: patient_agnostic.py
scripts/vessels/evaluate/: finetuned.py  patient_agnostic.py  patient_specific.py
scripts/vessels/register/: finetuned.py  patient_agnostic.py  patient_specific.py
scripts/vessels/train/: finetuned.py  patient_agnostic.py  patient_specific.py
search/: search_index.json
src/xvr/: __main__.py  cli.py  config.py
src/xvr/cli/: __init__.py  cli.py  finetune.py  formatter.py  register.py  restart.py  train.py
src/xvr/cli/commands/: animate.py  (+5 more)
src/xvr/config/: __init__.py  registrar.py  trainer.py
src/xvr/dicom/: __init__.py  xray.py
src/xvr/io/: __init__.py  intrinsics.py  xray.py
src/xvr/metrics/: evaluator.py
src/xvr/model/: __init__.py  augmentations.py  inference.py  io.py  loss.py  network.py  sampler.py  scheduler.py  trainer.py  utils.py
src/xvr/plot/: __init__.py  gif.py
src/xvr/register/: __init__.py  base.py  context.py  initializers.py  logging.py  loss.py  models.py  plot.py  pose.py  register.py  subject.py  utils.py
src/xvr/registrar/: __init__.py  base.py  dicom.py  fixed.py  model.py  restart.py
src/xvr/renderer/: __init__.py  render.py
src/xvr/utils/: __init__.py  ants.py  preprocess.py  transforms.py
src/xvr/visualization/: __init__.py  animate.py  viz2d.py
tests/: test_cli_defaults_register.py  test_cli_defaults_train.py
xvr/: __init__.py  cli.py  dicom.py  model.py  registrar.py  registrar_dicom.py  renderer.py  utils.py
xvr/commands/: __init__.py  finetune.py  register.py  train.py
(+35 files in other folders)
