[project]
name = "xvr"
version = "0.0.0rc2"
description = "Differentiable 2D/3D X-ray to volume registration"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Vivek Gopalakrishnan", email = "vivekg@mit.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "antspyx>=0.5.4",
    "click>=8.1.8",
    "diffdrr>=0.6.0",
    "jaxtyping>=0.3.7",
    "nanodrr",
    "pydicom[pixeldata]>=3.0.1",
    "wandb>=0.21.1",
]

[project.scripts]
xvr = "xvr.cli:cli"

[project.urls]
Repository = "https://github.com/eigenvivek/xvr"
Issues = "https://github.com/eigenvivek/xvr/issues"

[tool.ruff]
extend-exclude = ["*.ipynb"]
lint.extend-select = ["I"]
lint.ignore = [
    "F722",  # Forward annotation false positive from jaxtyping
    "F821",  # Forward annotation false positive from jaxtyping
]
src = ["src", "nanodrr"]

[tool.ruff.lint.isort]
known-first-party = ["xvr", "nanodrr"]
known-third-party = ["wandb"]

[tool.uv.workspace]
members = ["nanodrr"]

[tool.uv.sources]
nanodrr = { workspace = true, editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
jupyter = [
    "jupyter-ruff>=0.3.0",
    "jupyterlab>=4.4.10",
    "jupyterlab-execute-time>=3.2.0",
]
docs = [
    "zensical>=0.0.9",
]
