[project]
name = "xvr"
version = "0.0.0rc2"
description = "Differentiable 2D/3D X-ray to volume registration"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Vivek Gopalakrishnan", email = "vivekg@mit.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "antspyx>=0.5.4",
    "click>=8.1.8",
    "diffdrr>=0.6.0",
    "pydicom[pixeldata]>=3.0.1",
    "wandb>=0.21.1",
]

[project.scripts]
xvr = "xvr.cli:cli"

[project.urls]
Repository = "https://github.com/eigenvivek/xvr"
Issues = "https://github.com/eigenvivek/xvr/issues"

[tool.ruff]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-third-party = ["wandb"]

[tool.uv.sources]
diffdrr = { git = "https://github.com/eigenvivek/diffdrr" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "prek>=0.3.2",
]
docs = [
    "black>=26.1.0",
    "griffe>=2.0.0",
    "mkdocs-callouts>=1.16.0",
    "mkdocs-click>=0.9.0",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.7.1",
    "mkdocs-same-dir>=0.1.3",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings[python]>=1.0.3",
]
